# Vice

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
docs/: Contributing.md  Installation-Linux.md  Installation-Windows.md  Installation.md  Roadmap.md
flutter/: pubspec.yaml
flutter/lib/: icons.dart  invoke_js.dart  main.dart  randoms.dart  util.dart  window.dart
flutter/lib/blocks/: page.dart  view.dart
flutter/lib/blocks/types/: compression.dart  delay.dart  distortion.dart  gain.dart  gating.dart  reverb.dart
flutter/lib/channels/: edit_page.dart  main_page.dart  new_page.dart  page.dart
flutter/lib/pages/: channels.dart  soundboard.dart
flutter/lib/performance/: page.dart
flutter/lib/settings/: page.dart
flutter/lib/soundboard/: edit_page.dart  main_page.dart  new_page.dart  page.dart
flutter/web/: index.html  manifest.json
src/: files.rs  funcs.rs  lib.rs  main.rs  monitor.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: Icon-512-Template.pdn  icon.icns
src-tauri/icons-console/: Icon-512-Template.pdn  icon.icns
src-tauri/src/: audio.rs  files.rs  funcs.rs  lib.rs  lin.rs  main.rs  win.rs
src-tauri/src/audio/: audio.cpp  mod.rs
src-tauri/updater/: Cargo.toml
src-tauri/updater/src/: main.rs
src/audio/: audio.cpp  blocks.hpp  mod.rs
src/performance/: mod.rs  performance.cpp
updater/: Cargo.toml
updater/src/: main.rs
