[package]
name = "Vice"
version = "2.0.0"
description = "A Tauri App"
authors = ["GlowyGhost"]
edition = "2021"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true
codegen-units = 256

[[bin]]
name = "Vice"
path = "src/main.rs"

[lib]
name = "vice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.38"

[target."cfg(target_os = \"linux\")".build-dependencies]
pkg-config = "0.3.32"

[target."cfg(target_os = \"windows\")".build-dependencies]
winres = "0.1.12"

[dependencies]
wry = "0.53.5"
tao = "0.34.5"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
tiny_http = "0.12.0"
tray-icon = "0.21.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15.4"
open = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
once_cell = "1.21.3"

[target."cfg(target_os = \"windows\")".dependencies]
ico = "0.4.0"

[target."cfg(target_os = \"linux\")".dependencies]
png = "0.18.0"