[package]
name = "vice"
version = "1.2.0"
description = "A Tauri App"
authors = ["GlowyGhost"]
edition = "2021"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true
codegen-units = 256

[[bin]]
name = "Vice"
path = "src/main.rs"

[lib]
name = "vice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.2.38"
pkg-config = "0.3.32"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15.4"
open = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
sysinfo = "0.37.2"
once_cell = "1.21.3"